<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    android:padding="0dp"
    tools:context="cpall.DCSatisfaction_CPALL.Rating">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_margin="0dp"
        android:id="@+id/frameLayout">

        <!-- Logo Picture -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/imgview_rating_logoPicture"
            android:src="@mipmap/cpalllogolarge"
            android:maxHeight="60dp"
            android:maxWidth="100dp"
            android:padding="0dp"
            android:layout_margin="10dp" />

        <!-- Rectangle bar -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/imgview_rating_rectangleBar"
            android:src="#0179ca"
            android:padding="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:maxHeight="60dp"
            android:layout_gravity="center_horizontal|bottom" />

        <!-- Logo Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/logo_text"
            android:id="@+id/logo_word"
            android:paddingLeft="10dp"
            android:textColor="#2968ce"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="right|top"
            android:layout_marginTop="39dp"
            android:layout_marginRight="14dp" />

        <!-- Header text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/rating_employeeOverviewText"
            android:id="@+id/txtview_rating_instructionText"
            android:textSize="21sp"
            android:textIsSelectable="false"
            android:gravity="center"
            android:textColor="#ffffff"
            android:layout_marginTop="43dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=" "
            android:id="@+id/global_textView_storeID"
            android:paddingLeft="10dp"
            android:textColor="#7fb0ff"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="right|top"
            android:layout_marginTop="25dp"
            android:layout_marginRight="14dp"
            android:textIsSelectable="false" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/frameLayout">

        <!-- Name - Result -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/rating_result_name"
            android:text=""
            android:layout_gravity="center_horizontal|top"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textIsSelectable="false"
            android:gravity="center"
            android:layout_marginTop="20dp" />

        <!-- Name - Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rating_label_name"
            android:id="@+id/rating_label_name"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="45dp"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="#515151" />

        <!-- Plate Number - Result -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=""
            android:id="@+id/rating_result_plateNumber"
            android:layout_gravity="center_horizontal|top"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginTop="70dp"
            android:gravity="center" />

        <!-- Plate Number - Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rating_label_plateNumber"
            android:id="@+id/rating_label_plateNumber"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="95dp"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="#FF515151" />

        <!-- Supplier - Result -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/rating_result_supplierName"
            android:layout_gravity="center_horizontal|top"
            android:textColor="#000000"
            android:text=""
            android:textSize="18sp"
            android:layout_marginTop="120dp"
            android:gravity="center" />

        <!-- Supplier - Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rating_label_supplierName"
            android:id="@+id/rating_label_supplierName"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="145dp"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="#FF515151" />

        <!-- Emotion - Happy
        background=@null หมายความว่าไม่มีขอบ -->
        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imgbtn_rating_happy"
            android:src="@mipmap/emotion_happy"
            android:clickable="false"
            android:background="@null"
            android:onClick="onClick"
            android:layout_gravity="left|center_vertical"
            android:layout_marginTop="60dp" />

        <!-- Emotion - Okay -->
        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imgbtn_rating_okay"
            android:src="@mipmap/emotion_okay"
            android:onClick="onClick"
            android:background="@null"
            android:clickable="false"
            android:layout_gravity="center"
            android:layout_marginTop="60dp" />

        <!-- Emotion - Mad -->
        <ImageButton
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imgbtn_rating_mad"
            android:src="@mipmap/emotion_mad"
            android:onClick="onClick"
            android:background="@null"
            android:layout_gravity="right|center_vertical"
            android:layout_marginTop="60dp" />

        <!-- Description - Happy -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rating_label_happy"
            android:id="@+id/txtview_label_happy"
            android:textColor="#000000"
            android:layout_below="@+id/imgbutton_happy"
            android:layout_gravity="left|center_vertical"
            android:layout_marginTop="135dp"
            android:layout_marginLeft="35dp"
            android:onClick="onClick" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rating_label_okay"
            android:id="@+id/txtview_label_okay"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:layout_marginTop="135dp"
            android:onClick="onClick"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rating_label_mad"
            android:id="@+id/txtview_label_mad"
            android:textColor="#000000"
            android:layout_gravity="right|center_vertical"
            android:layout_marginTop="135dp"
            android:gravity="center"
            android:layout_marginRight="25dp"
            android:onClick="onClick" />
    </FrameLayout>

</RelativeLayout>