<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context="cpall.DCSatisfaction_CPALL.PrintSuccess">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:id="@+id/frameLayout2"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/imageView"
            android:src="@mipmap/cpalllogolarge"
            android:maxHeight="60dp"
            android:maxWidth="100dp"
            android:padding="0dp"
            android:layout_margin="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/logo_text"
            android:id="@+id/textView3"
            android:paddingLeft="10dp"
            android:textColor="#2968ce"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="right|top"
            android:layout_marginTop="39dp"
            android:layout_marginRight="14dp" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <!-- Logo picture -->

        <!-- Confirmation message -->
        <TextView
            android:layout_width="210dp"
            android:layout_height="80dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/printSuccess_successTxt"
            android:id="@+id/printSuccess_successText"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="70dp" />

        <!-- Return Home button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="60sp"
            android:text="@string/printSuccess_returnHomeTxt"
            android:id="@+id/btn_printSuccess_returnHome"
            android:background="#f10088c7"
            android:padding="10dp"
            android:textColor="#ffffff"
            android:onClick="onClick"
            android:textSize="16sp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190dp"
            android:layout_marginBottom="20dp" />

    </RelativeLayout>

</LinearLayout>
