<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    android:padding="0dp"
    tools:context="cpall.DCSatisfaction_CPALL.ConfirmNoQuestion"
    android:orientation="vertical"
    android:weightSum="1">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_margin="0dp"
        android:id="@+id/frameLayout">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/confirm_logoPicture"
            android:src="@mipmap/cpalllogolarge"
            android:maxHeight="60dp"
            android:maxWidth="100dp"
            android:padding="0dp"
            android:layout_margin="10dp" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/confirm_rectangleBar"
            android:src="#0179ca"
            android:padding="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:maxHeight="60dp"
            android:layout_gravity="center_horizontal|bottom" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/logo_text"
            android:id="@+id/txtview_confirm_logoText"
            android:paddingLeft="10dp"
            android:textColor="#2968ce"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="right|top"
            android:layout_marginTop="39dp"
            android:layout_marginRight="14dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/confirm_headerTxt"
            android:id="@+id/txtview_confirm_headerText"
            android:textSize="21sp"
            android:textIsSelectable="false"
            android:gravity="center"
            android:textColor="#ffffff"
            android:layout_marginTop="43dp"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=" "
            android:id="@+id/global_textView_storeID"
            android:paddingLeft="10dp"
            android:textColor="#7fb0ff"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="right|top"
            android:layout_marginTop="25dp"
            android:layout_marginRight="14dp"
            android:textIsSelectable="false" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/LinearLayout"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.74">

        <!-- Emotion face -->

        <!-- Description of the emotion face -->

        <ImageButton
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/imgbtn_confirm_emotionSelected"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/rating_label_happy"
            android:id="@+id/txtview_confirm_emotionText"
            android:textColor="#3b3028"
            android:layout_marginTop="15dp"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginLeft="15dp" />

        <!-- Error Display Text -->

        <!-- Back button -->

        <!-- Submit button -->

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_submitText"
            android:id="@+id/buttonSubmit"
            android:background="#00c441"
            android:shadowColor="#000000"
            android:singleLine="false"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:onClick="onClick"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="30dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_goBackText"
            android:id="@+id/buttonBack"
            android:background="#a3a3a3"
            android:shadowColor="#000000"
            android:singleLine="false"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:onClick="onClick"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="30dp" />
    </FrameLayout>

</LinearLayout>
