<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="0dp"
    tools:context="cpall.DCSatisfaction_CPALL.SecondTimeVerify">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp">


        <!-- Confirmation message -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/secondVerify_header"
            android:id="@+id/secondTime_headingtxt"
            android:textColor="#000000"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <!-- Continue button -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=" "
            android:id="@+id/secondTime_input"
            android:layout_below="@+id/secondTime_headingtxt"
            android:layout_centerHorizontal="true"
            android:textSize="22sp"
            android:textColor="#40b4fd" />

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondVerify_confirmTxt"
            android:id="@+id/secondTime_btn_go"
            android:background="#00c441"
            android:shadowColor="#000000"
            android:singleLine="false"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:onClick="onClick"
            android:layout_gravity="bottom|right"
            android:layout_marginRight="30dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondVerify_editTxt"
            android:id="@+id/secondTime_btn_back"
            android:background="#a3a3a3"
            android:shadowColor="#000000"
            android:singleLine="false"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:onClick="onClick"
            android:layout_gravity="left|bottom"
            android:layout_marginLeft="30dp" />
    </FrameLayout>

</LinearLayout>
