<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    android:padding="0dp"
    tools:context="cpall.DCSatisfaction_CPALL.HomeScreen">

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="0dp">

        <!-- Logo Image -->
        <ImageView
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:id="@+id/imgview_home_logoPicture"
            android:src="@mipmap/cpalllogolarge"
            android:maxHeight="60dp"
            android:maxWidth="100dp"
            android:padding="0dp"
            android:layout_margin="10dp" />

        <!-- Logo Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/logo_text"
            android:id="@+id/txtview_home_logoText"
            android:paddingLeft="10dp"
            android:textColor="#2968ce"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="right|top"
            android:layout_marginTop="39dp"
            android:layout_marginRight="14dp" />

        <!-- Span description -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=" "
            android:id="@+id/global_textView_storeID"
            android:paddingLeft="10dp"
            android:textColor="#7fb0ff"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_gravity="right|top"
            android:layout_marginTop="25dp"
            android:layout_marginRight="14dp"
            android:textIsSelectable="false" />
    </FrameLayout>

    <!-- Banner Image -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imgview_largeBanner"
        android:layout_marginTop="10dp"
        android:src="@mipmap/hero"
        android:minHeight="160dp"
        android:contentDescription="banner" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Start button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_startSurvey"
            android:id="@+id/btn_home_start"
            android:background="#ffa600"
            android:shadowColor="#000000"
            android:singleLine="false"
            android:drawableLeft="@android:drawable/ic_menu_agenda"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:onClick="onClick"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/txtview_home_introText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <!-- Logo Image -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/home_introText"
            android:id="@+id/txtview_home_introText"
            android:textColor="#ffffff"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:textIsSelectable="true"
            android:gravity="center"
            android:typeface="sans"
            android:background="#0179ca"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:padding="10dp" />
    </RelativeLayout>

</LinearLayout>
